# rag-pipe

./: .sast-exceptions.json  .sca-exceptions.json  CONTRIBUTING.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  mutation.yml  release-tag.yml  release.yml  security.yml
api/: auth.py  main.py
evaluation/: contracts.py  gates.py
golden/: threat-modelling-aws-war.jsonl
ingestion/: cli.py  contracts.py  manifest.py  pipeline.py
mcp/: server.py
packs/threat-modelling-aws-war/: manifest.yaml
packs/threat-modelling-aws-war/docs/: data-protection.md  detection-response.md  identity-and-access.md  network-segmentation.md  stride-overview.md
retrieval/: contracts.py  service.py
tests/: test_api_contract.py  test_gates.py
tests/e2e/: test_query_api_e2e.py
tests/performance/: test_retrieval_latency_performance.py
tests/security/: test_auth_boundary_security.py  test_pack_entitlements_security.py  test_pack_isolation_security.py
tests/unit/: test_api_health_unit.py  test_auth_unit.py  test_gates_unit.py  test_ingestion_cli_unit.py  test_ingestion_manifest_unit.py  test_ingestion_pipeline_unit.py  test_mcp_server_unit.py  test_retrieval_unit.py
