[project]
name = "rag-pipe"
version = "0.1.0"
description = "Productised multi-tenant RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
  "pyyaml>=6.0.2",
  "qdrant-client>=1.15.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.6.0",
  "sentence-transformers>=3.0.0",
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.36.0",
  "opentelemetry-sdk>=1.36.0",
  "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0"
]

[project.scripts]
pack = "ingestion.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
