[project]
name = "rag-pipe"
version = "0.1.0"
description = "Productised multi-tenant RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.0",
  "pydantic==2.13.4",
  "typer==0.27.0",
  "pyyaml==6.0.3",
  "qdrant-client==1.18.0",
  "langchain==1.3.13",
  "langchain-community==0.4.2",
  "langgraph==1.2.9",
  "sentence-transformers==5.6.0",
  "prometheus-client==0.25.0",
  "opentelemetry-api==1.43.0",
  "opentelemetry-sdk==1.43.0",
  "uvicorn==0.51.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "httpx==0.28.1"
]

[project.scripts]
pack = "ingestion.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "evaluation", "ingestion", "mcp", "packs", "retrieval"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast unit tests for core logic contracts",
  "e2e: end-to-end tests across API request/response flow",
  "security: security and tenancy boundary tests",
  "performance: performance and latency budget smoke tests"
]
